--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,7 @@ on:
       - 'assets/**'
       - 'LICENSE'
       - '.gitignore'
+      - '.gitattributes'
 
   pull_request:
     branches: [ "main" ]
@@ -17,6 +18,7 @@ on:
       - 'assets/**'
       - 'LICENSE'
       - '.gitignore'
+      - '.gitattributes'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
