--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Run tests
         run: |
-          uv run pytest --cov=afv --cov-branch --cov-report=xml
+          uv run pytest --cov=pyafv --cov-branch --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
