--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: pytest
 on:
   push:
     paths-ignore:
-      - 'README.md'
+      - '**/README*'
       - 'examples/**'
       - 'assets/**'
       - 'LICENSE'
@@ -13,7 +13,7 @@ on:
   pull_request:
     branches: [ "main" ]
     paths-ignore:
-      - 'README.md'
+      - '**/README*'
       - 'examples/**'
       - 'assets/**'
       - 'LICENSE'
