--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Run tests
         run: |
-          uv run pytest --cov=pyafv --cov-branch --cov-report=xml
+          uv run --no-dev pytest --cov=pyafv --cov-branch --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
