--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README_PyPI.md"
 authors = [
     { name = "Wei Wang (汪巍)", email = "ww000721@gmail.com" }
 ]
-license = {file = "LICENSE"}
+license = "MIT"
+license-files = ["LICENSE"] # Explicitly include the file
 requires-python = ">=3.11"
 dependencies = [
     "numpy>=2.1.3",
@@ -38,9 +39,6 @@ dev = [
 [tool.setuptools]
 packages = ["pyafv"]  # optional but explicit
 include-package-data = true
-
-[tool.setuptools.package-data]
-pyafv = ["*.pyx", "*.pxd"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
