--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=64", "cython>=3.0", "numpy>=2.1.3"]
+requires = ["setuptools>=64", "cython>=3.0", "numpy>=1.26.4"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -14,9 +14,9 @@ license = "MIT"
 license-files = ["LICENSE"] # Explicitly include the file
 requires-python = ">=3.11"
 dependencies = [
-    "numpy>=2.1.3",
-    "scipy>=1.15.3",
-    "matplotlib>=3.10.7",
+    "numpy>=1.26.4",
+    "scipy>=1.13.1",
+    "matplotlib>=3.8.4",
 ]
 
 [project.urls]
@@ -45,3 +45,10 @@ pyafv = ["*.pyx"]  # exclude from the installation wheel
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 # pythonpath = ["."]  # not needed if package is installed
+# filter warnings from matplotlib about pyparsing
+filterwarnings = [
+    "ignore:'oneOf' deprecated:DeprecationWarning",
+    "ignore:'parseString' deprecated:DeprecationWarning",
+    "ignore:'resetCache' deprecated:DeprecationWarning",
+    "ignore:'enablePackrat' deprecated:DeprecationWarning"
+]
