--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=64", "cython>=3.0", "numpy>=2.1.3"]
+requires = ["setuptools>=64", "cython>=3.0", "numpy>=1.26.4"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyafv"
-version = "0.3.2"
+version = "0.3.3"
 description = "Python implementation of the active-finite-Voronoi (AFV) model"
 readme = "README_PyPI.md"
 authors = [
@@ -12,11 +12,27 @@ authors = [
 ]
 license = "MIT"
 license-files = ["LICENSE"] # Explicitly include the file
-requires-python = ">=3.11"
+requires-python = ">=3.9,<3.15"
 dependencies = [
-    "numpy>=2.1.3",
-    "scipy>=1.15.3",
-    "matplotlib>=3.10.7",
+    "numpy>=1.26.4",
+    "scipy>=1.13.1",
+    "matplotlib>=3.8.4",
+]
+
+keywords = ["voronoi-model", "cellular-patterns", "biological-modeling"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering",
 ]
 
 [project.urls]
@@ -45,3 +61,10 @@ pyafv = ["*.pyx"]  # exclude from the installation wheel
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 # pythonpath = ["."]  # not needed if package is installed
+# filter warnings from matplotlib about pyparsing
+filterwarnings = [
+    "ignore:'oneOf' deprecated:DeprecationWarning",
+    "ignore:'parseString' deprecated:DeprecationWarning",
+    "ignore:'resetCache' deprecated:DeprecationWarning",
+    "ignore:'enablePackrat' deprecated:DeprecationWarning"
+]
