--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,8 @@ on:
       - '**/*.md'
       - 'examples/**'
       - 'assets/**'
+      - 'docs/**'
+      - '.readthedocs.yml'
       - 'LICENSE'
       - '.gitignore'
       - '.gitattributes'
@@ -18,6 +20,8 @@ on:
       - '**/*.md'
       - 'examples/**'
       - 'assets/**'
+      - 'docs/**'
+      - '.readthedocs.yml'
       - 'LICENSE'
       - '.gitignore'
       - '.gitattributes'
