--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyafv"
-version = "0.3.3"
+dynamic = ["version"]
 description = "Python implementation of the active-finite-Voronoi (AFV) model"
 readme = "README_PyPI.md"
 authors = [
@@ -54,6 +54,9 @@ dev = [
 
 [tool.setuptools]
 packages = ["pyafv"]  # optional but explicit
+
+[tool.setuptools.dynamic]
+version = {attr = "pyafv.__version__"}
 
 [tool.setuptools.exclude-package-data]
 pyafv = ["*.pyx"]  # exclude from the installation wheel
