:bug: Fix errors found by reviewers

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
       - 'examples/**'
       - 'assets/**'
       - 'docs/**'
-      - '.readthedocs.yml'
+      - '.readthedocs.yaml'
       - 'LICENSE'
       - '.gitignore'
       - '.gitattributes'
@@ -21,7 +21,7 @@ on:
       - 'examples/**'
       - 'assets/**'
       - 'docs/**'
-      - '.readthedocs.yml'
+      - '.readthedocs.yaml'
       - 'LICENSE'
       - '.gitignore'
       - '.gitattributes'
