--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 ]
 license = "MIT"
 license-files = ["LICENSE"] # Explicitly include the file
-requires-python = ">=3.9,<3.15"
+requires-python = ">=3.10,<3.15"
 dependencies = [
     "numpy>=1.26.4",
     "scipy>=1.13.1",
@@ -25,7 +25,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -38,6 +37,8 @@ classifiers = [
 [project.urls]
 "Download" = "https://pypi.org/project/pyafv/#files"
 "Source Code" = "https://github.com/wwang721/pyafv"
+"Documentation" = "https://pyafv.readthedocs.io/"
+"Changelog" = "https://github.com/wwang721/pyafv/releases/latest"
 
 [project.optional-dependencies]
 examples = [
