:wrench: Keep only one README in .tar.gz

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,6 @@ recursive-include pyafv *.pyx *.py
 # Include the extra folders in the tar.gz
 recursive-include tests *
 recursive-include examples *.py
+
+# Exclude unnecessary files in the tar.gz
+exclude README.md
