--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,18 @@
 [build-system]
-requires = ["setuptools>=64", "cython>=3.0", "numpy>=1.26.4"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-cython", "numpy>=1.26.4"]
+build-backend = "hatchling.build"
 
 [project]
 name = "pyafv"
 dynamic = ["version"]
 description = "Python implementation of the active-finite-Voronoi (AFV) model"
-readme = "README_PyPI.md"
+readme = "README.md"
 authors = [
-    { name = "Wei Wang (汪巍)", email = "ww000721@gmail.com" }
+    { name = "Wei Wang" },
+    { email = "ww000721@gmail.com" }
 ]
 license = "MIT"
-license-files = ["LICENSE"] # Explicitly include the file
+license-files = ["LICENSE"]  # Explicitly include the file
 requires-python = ">=3.10,<3.15"
 dependencies = [
     "numpy>=1.26.4",
@@ -35,6 +36,7 @@ classifiers = [
 ]
 
 [project.urls]
+"Homepage" = "https://github.com/wwang721/pyafv"
 "Download" = "https://pypi.org/project/pyafv/#files"
 "Source Code" = "https://github.com/wwang721/pyafv"
 "Documentation" = "https://pyafv.readthedocs.io/"
@@ -54,13 +56,23 @@ dev = [
 ]
 
 [tool.setuptools]
-packages = ["pyafv"]  # optional but explicit
+packages = ["pyafv"]
 
-[tool.setuptools.dynamic]
-version = {attr = "pyafv._version.__version__"}
+[tool.hatch.version]
+path = "pyafv/_version.py"
 
-[tool.setuptools.exclude-package-data]
-pyafv = ["*.pyx"]  # exclude from the installation wheel
+[tool.hatch.build.targets.wheel]
+exclude = ["*.pyx", "*.c", "*.cpp"]  # exclude from the installation wheel
+
+[tool.hatch.build.targets.wheel.hooks.cython.options]
+include_numpy = true
+compile_py = false
+cythonize_kwargs = { build_dir = "build" }
+directives = { boundscheck = false, wraparound = false, language_level = 3}
+
+[tool.hatch.build.targets.sdist]
+# Exclude from .tar.gz source distribution
+exclude = ["assets/", "docs/", "examples/jupyter/", "*.md", ".*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
