--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -11,7 +11,7 @@ jobs:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     env:
-      CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-* cp314-*"
+      CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
       CIBW_BUILD_FRONTEND: "build[uv]"
     strategy:
       matrix:
