--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/wwang721/pyafv"
+"Homepage" = "https://pyafv.github.io"
 "Download" = "https://pypi.org/project/pyafv/#files"
 "Source Code" = "https://github.com/wwang721/pyafv"
 "Documentation" = "https://pyafv.readthedocs.io/"
