--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,12 +31,21 @@ jobs:
           VERSION=$(sed -n 's/^__version__ = ["'\'']\([^"'\'']*\)["'\'']/\1/p' pyafv/_version.py)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
+      # Set up the multi-architecture builder
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: .github/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64
+          provenance: false  # disable the extra attestation manifests
           tags: |
             ghcr.io/${{ github.repository_owner }}/pyafv:latest
             ghcr.io/${{ github.repository_owner }}/pyafv:${{ steps.get_version.outputs.version }}
