--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: wwang721
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Get version from repository
         id: get_version
         run: |
@@ -49,3 +55,5 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/pyafv:latest
             ghcr.io/${{ github.repository_owner }}/pyafv:${{ steps.get_version.outputs.version }}
+            docker.io/wwang721/pyafv:latest
+            docker.io/wwang721/pyafv:${{ steps.get_version.outputs.version }}
